syntax = "proto3";

package schemas;

service Weather {
  rpc GetWeatherInformation(WeatherRequest) returns (WeatherReply) {}
}

message WeatherRequest {
  string location = 1;
}

message WeatherReply {
  string location = 1;
  string condition = 2;
  string actualTemperature = 3;
  string feelsLikeTemperature = 4;
}

